Update font import and add Raleway font section with controls for copying and downloading

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Editor SVG - Titulos y colores</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Space+Grotesk:wght@400;500;600&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Raleway:wght@400;500;600&family=Space+Grotesk:wght@400;500;600&display=swap");
 
       :root {
         color-scheme: light;
@@ -481,6 +481,48 @@
               <a
                 class="copy"
                 href="https://fonts.google.com/?category=Sans+Serif"
+                target="_blank"
+                rel="noopener"
+              >
+                Descargar
+              </a>
+            </div>
+          </div>
+          <div class="font-stage">
+            <h3 class="font-name">Raleway</h3>
+            <div class="font-sample" style='font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;'>
+              The quick brown fox jumps over the lazy dog.
+            </div>
+            <div class="font-sample secondary" style='font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;'>
+              Aa Bb Cc Dd Ee Ff 0123456789
+            </div>
+            <div class="font-stack">
+              <code>font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;</code>
+            </div>
+          </div>
+          <div class="controls">
+            <div class="control">
+              <div>
+                <label>Importar</label>
+                <span class="note">font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;</span>
+              </div>
+              <button
+                class="copy"
+                type="button"
+                data-copy-text='font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;'
+                data-status-target="status-font-helvetica"
+              >
+                Copiar
+              </button>
+            </div>
+            <div class="control">
+              <div>
+                <label>Descargar</label>
+                <span class="note">fonts.google.com</span>
+              </div>
+              <a
+                class="copy"
+                href="https://fonts.google.com/specimen/Raleway"
                 target="_blank"
                 rel="noopener"
               >
